[project]
name = "python-tools-3"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]  # ошибки, импорты, модернизация, багопаттерны, аннотации типов

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "flake8-docstrings>=1.7.0",
    "mypy>=2.1.0",
]
