[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "ANN", "D"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"   # "google" | "numpy" | "pep257"

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = ["pytest", "ruff", "mypy"]

[tool.mypy]
python_version = "3.12"
